syntax = "proto3";

package users;

service UserService {
    rpc Create (User) returns (User) {}
    rpc FindAllUsers (Empty) returns (UsersList) {}
    rpc FindOneByUserId (UserId) returns (User) {}
    rpc FindOne (Search) returns (User) {}
    rpc Update (User) returns (User) {}
    rpc Remove (UserId) returns (User) {}
}

message Empty {}

message UserId  {
  string id = 1;
}

message User {
  string id = 1;
  string email = 2;
  string password = 3;
  string firstName = 4;
  string lastName = 5;
  string accessToken = 6;
  string refreshToken = 7;
}

message UsersList {
   repeated User users = 1;
}

message Search {
  string key = 1;
  string value = 2;
}
